New class called PlayerbotMgr
This class manages all bots for a master and provides methods to add
bots, remove bots, get bot by GUID, filter master's packets. Previously
all these functions
were scattered around the Mangos code and static functions inside
PlayerbotAI.

This class will hopefully in time be used for coordination for the bots.
The PlayerbotMgr class has an updateAI method which gets called every
tick. For now its empty, but in the future I forsee this method being
used to give its bots default orders according to the situation. The
real life player could also issue commands to this class and this class
would then issue the appropriate orders to the bots. This could also
work in reverse to. Methods could be added to this class that the Bot AI
can call when it recognizes that it needs a heal, cure, help, etc..

Bots for a player are now owned by a PlayerbotMgr object which is owned
by the master's Player object. Previously bots were owned by the
master's WorldSession which persisted through player login/logout which
wasn't a good thing.

Now when the master logs out, bots automatically disconnect.

--- a/src/game/Makefile.am
+++ b/src/game/Makefile.am
@@ -209,6 +209,8 @@ libmangosgame_a_SOURCES = \
 	PetitionsHandler.cpp \
 	Player.cpp \
 	Player.h \
+	PlayerbotMgr.cpp \
+	PlayerbotMgr.h \
 	PlayerbotAI.cpp \
 	PlayerbotAI.h \
 	PlayerbotClassAI.cpp \
