--- a/src/mangosd/mangosd.conf.dist.in
+++ b/src/mangosd/mangosd.conf.dist.in
@@ -1308,7 +1308,7 @@ Ra.Secure = 1
 ###################################################################################################################
 # PLAYERBOTAI CONFIGURATION
 #
-#    PlayerbotAI.Debug
+#    PlayerbotAI.DebugWhisper
 #        Enable debug output by whispering master
 #        Default: 0 - off
 #                 1 - on
