--- a/src/mangosd/mangosd.conf.dist.in
+++ b/src/mangosd/mangosd.conf.dist.in
@@ -1424,9 +1424,26 @@ SOAP.Port = 7878
 #    PlayerbotAI.FollowDistanceMax
 #        Min. and Max. follow distance for bots
 #        Default: 0.5 / 1.0
+#
+#    PlayerbotAI.MaxNumBots
+#        Limits the number of bots per account (Max 9)
+#        Default: 9
+#
+#    PlayerbotAI.DisableBotsInRealm
+#        Disable the bot command and bot menu for this realm
+#        Default: 0 - off
+#        Realm id: - on
+#
+#    PlayerbotAI.RestrictBotLevel
+#        Restrict the allowed bot level (Current Max 80)
+#        Default: 80 
+#
 ###################################################################################################################
 
 PlayerbotAI.DisableBots = 0
 PlayerbotAI.DebugWhisper = 0
 PlayerbotAI.FollowDistanceMin = 0.5
 PlayerbotAI.FollowDistanceMax = 1.0
+PlayerbotAI.MaxNumBots = 9
+PlayerbotAI.DisableBotsInRealm = 0
+PlayerbotAI.RestrictBotLevel = 80
