Playerbot file migration & new config file

--- a/configure.ac
+++ b/configure.ac
@@ -302,12 +302,18 @@ AC_CONFIG_FILES([
    src/shared/vmap/Makefile
    src/shared/SystemConfig.h
    src/game/Makefile
+   src/game/playerbot/Makefile
+   src/game/playerbot/playerbot.conf.dist
    src/realmd/Makefile
    src/realmd/realmd.conf.dist
    src/mangosd/Makefile
    src/mangosd/mangosd.conf.dist
    src/bindings/Makefile
-   src/bindings/universal/Makefile
+   src/bindings/ScriptDev2/Makefile
+   src/bindings/ScriptDev2/scriptdev2.conf.dist
+   src/bindings/ScriptDev2/config.h
+   src/bindings/ScriptDev2/sql/Makefile
+   src/bindings/ScriptDev2/sql/Updates/Makefile
 ])
 
 ## Configure ACE, if needed
