further step into making playerbot modular
discussed on topic http://mangos.osh.nu/forums/index.php?showtopic=1143 so if is there problems or room for improvement, reply there

--- a/configure.ac
+++ b/configure.ac
@@ -303,6 +303,7 @@ AC_CONFIG_FILES([
    src/shared/SystemConfig.h
    src/game/Makefile
    src/game/playerbot/Makefile
+   src/game/playerbot/config.h
    src/game/playerbot/playerbot.conf.dist
    src/realmd/Makefile
    src/realmd/realmd.conf.dist
