Adjust for core 'config' changes

--- a/src/game/playerbot/playerbot.conf.dist.in
+++ b/src/game/playerbot/playerbot.conf.dist.in
@@ -1,7 +1,9 @@
 #####################################
 # Playerbot Configuration file      #
 #####################################
-ConfVersion=2010060201
+
+[PlayerbotConf]
+ConfVersion=2010062001
 
 ###################################################################################################################
 # PLAYERBOTAI CONFIGURATION
